update mark tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, aperiam!</p>
+    <p>Lorem ipsum dolor <mark> sit, amet consectetur adipisicing elit.</mark> Suscipit, aperiam!</p>
 
 </body>
 </html>
